# rule

./: .env.example  .gitattributes  .gitignore  AGENTS.md  IMPLEMENTATION_PLAN.md  README.md  architecture.md  prd-architecture-revision-note.md  prd.md  vendor-survey.ko.md  vendor-survey.vi.md
mcp-db-connector/: pyproject.toml
mcp-db-connector/src/brp_mcp_db/: __init__.py  connector.py  server.py
mcp-db-connector/tests/: test_connector.py  test_smoke.py
platform/: Dockerfile  README.md  alembic.ini  pyproject.toml
platform/migrations/: env.py
platform/migrations/versions/: 0001_governed_repository.py  0002_ingestion_fingerprints.py  0003_golden_governance.py  0004_mode_a_publications.py  0005_production_control_plane.py  0006_worker_heartbeats.py  0007_site_scoped_hashes.py  0008_canonical_packages.py  0009_candidate_package_promotion.py
platform/src/brp/: __init__.py  artifacts.py  cli.py  db.py  db_table_source.py  delivery.py  delivery_providers.py  generation.py  git_source.py  github_delivery.py  ingestion.py  jobs.py  migrate.py  observability.py  orchestration.py  secrets.py  seed.py  settings.py  worker.py
platform/tests/: __init__.py  conftest.py  test_artifacts.py  test_db_table_source.py  test_delivery_providers.py  test_git_source.py  test_github_delivery.py  test_job_keys.py  test_observability.py  test_runtime_settings.py  test_smoke.py
platform/tests/adapters/: test_code_java.py  test_contract.py  test_db_postgres.py  test_db_stored_object.py  test_dmn.py  test_docs_manual.py  test_engine_native.py  test_joern_locate.py  test_joern_slice.py  test_ui_validation.py
platform/tests/api/: test_canonical_package_api.py  test_deployment_authorization.py  test_golden_api.py  test_orchestration_api.py  test_repository_api.py  test_v1_control_plane.py
platform/tests/benchmark/: test_runner.py
platform/tests/canonical_package/: test_compiler.py  test_repository.py
platform/tests/ci/: test_workflow.py
platform/tests/config/: __init__.py  test_capability_matrix.py  test_site_profile.py
(+219 files in other folders)
