[project]
name = "brp-mcp-db"
version = "0.1.0"
description = "Read-only, connection-driven database MCP connector for BRP"
requires-python = ">=3.12,<3.13"
dependencies = [
    "mcp>=1.28.1",
    "psycopg[binary]>=3.3.4",
]

[project.scripts]
brp-mcp-db = "brp_mcp_db.server:main"

[build-system]
requires = ["uv_build>=0.10.3,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
