[project]
name = "brp"
version = "0.1.0"
description = "Business Rules Platform core services and orchestration"
readme = "README.md"
authors = [
    { name = "Codex", email = "codex@local.invalid" }
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.18.5",
    "brp-mcp-db",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "mcp>=1.28.1",
    "openpyxl>=3.1.5",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.7",
    "pyjwt[crypto]>=2.10,<3",
    "pypdf>=6.14.2",
    "python-docx>=1.2.0",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0",
    "structlog>=26.1.0",
    "typer>=0.26.8",
    "uvicorn[standard]>=0.51.0",
    "zen-engine==0.53.0",
]

[tool.uv.sources]
brp-mcp-db = { path = "../mcp-db-connector" }

[project.scripts]
brp = "brp:main"

[build-system]
requires = ["uv_build>=0.10.3,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.2.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.21",
    "types-pyyaml>=6.0.12.20260518",
    "types-openpyxl>=3.1.5.20250602",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
